added new section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <p>Hello wazzap duck</p>
       </div>
     </section>
+
+    <section>
+      <div class="container">
+        <h2>Next section</h2>
+      </div>
+    </section>
   </main>
 </body>
 </html>
